# fittrack-ai

./: .dockerignore  .env.example  .gitignore  BACKEND_STATUS.md  README.md  docker-compose.yml  render.yaml
apps/backend/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/backend/accounts/: managers.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/backend/accounts/migrations/: 0001_initial.py
apps/backend/analytics/: serializers.py  services.py  tests.py  urls.py  views.py
apps/backend/config/: env.py  exceptions.py  middleware.py  openapi.py  openapi_examples.py  pagination.py  settings.py  tests.py  urls.py
apps/backend/exercises/: apps.py  models.py  selectors.py  serializers.py  tests.py  urls.py  views.py
apps/backend/exercises/migrations/: 0001_initial.py  0002_exercise.py
apps/backend/fittrack_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/health/: apps.py  serializers.py  tests.py  urls.py  views.py
apps/backend/nutrition/: calculations.py  external_foods.py  models.py  photo_storage.py  providers.py  recognitions.py  selectors.py  serializers.py  test_external_foods.py  test_providers.py  test_seed_food_catalog.py  tests.py  urls.py  views.py
apps/backend/profiles/: models.py  serializers.py  tests.py  urls.py  views.py
apps/backend/routines/: models.py  serializers.py  tests.py  urls.py  views.py
apps/backend/workouts/: calculations.py  models.py  records.py  serializers.py  services.py  test_calculations.py  tests.py  urls.py  views.py
(+54 files in other folders)
